fix icon alignment

--- a/workspace/apps/pidp/src/app/features/admin/pages/parties/parties.page.scss
+++ b/workspace/apps/pidp/src/app/features/admin/pages/parties/parties.page.scss
@@ -10,7 +10,7 @@ table {
 
 mat-icon {
   color: #999;
-  padding-top: 0.5rem;
+  vertical-align: middle;
 
   &.has-requested {
     color: palette.theme-palette(green);
